--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
 		"bootstrap": "^4.3.1",
 		"electron-is-dev": "^0.3.0",
 		"electron-publisher-s3": "^20.17.2",
+		"moment": "^2.24.0",
 		"mysql": "^2.16.0",
 		"react": "^16.4.1",
 		"react-bootstrap": "^1.0.0-beta.6",
+		"react-datepicker": "^2.3.0",
 		"react-dev-utils": "^5.0.1",
 		"react-dom": "^16.8.6",
 		"react-icons": "^3.5.0",
