--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "react": "^16.4.1",
-    "react-bootstrap": "^1.0.0-beta.6",
     "react-datepicker": "^2.3.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.8.6",
@@ -54,6 +53,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.0.0",
     "react-simple-tooltip": "^2.5.0",
+    "reactstrap": "^8.0.0",
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
