--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pack": "electron-builder --dir",
     "dist-linux": "npm run build && electron-builder --x64 --linux --c.extraMetadata.main=build/electron.js -p always",
     "dist": "npm run build && electron-builder --x64 --win --linux --c.extraMetadata.main=build/electron.js -p always",
+    "dist-win": "npm run build && electron-builder --x64 --win --c.extraMetadata.main=build/electron.js -p always",
     "dist-win-32": "npm run build && electron-builder --ia32 --win --c.extraMetadata.main=build/electron.js -p always"
   },
   "keywords": [
